# puzzlepull

./: .gitignore  LICENSE  README.md  _config.yml  app.py  compose.yaml  index.html  index.md  main.py  mdb_test.html  messing.py  puzzlepull.py  pyproject.toml  zappa_settings.json
_layouts/: default.html
api/: .dockerignore  .gitignore  Dockerfile  main.py  pyproject.toml
api/puzzlepull/: db.py  guardian.py  helper.py  observer.py
assests/css/: style.scss
assets/css/: style.css
static/js/: app.js
svelte/: .dockerignore  Dockerfile  README.md  package.json  pnpm-lock.yaml  svelte.config.js
svelte/src/: app.html
svelte/src/lib/: validHostnames.json
svelte/src/routes/: +layout.server.ts  +layout.svelte  +page.svelte
svelte/src/routes/compatibility/: +page.svelte
svelte/src/routes/counter/: +server.ts
svelte/src/routes/getPuzzle/: +server.ts
