[tool.poetry]
name = "puzzlepull"
version = "0.1.0"
description = "A tool to pull crosswords from the Guardian website and convert them into .ipuz format."
authors = ["Jarred Green <astrojarred@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.25.1"
beautifulsoup4 = "^4.9.3"
ipuz = "^0.1.4"
ipykernel = "^5.4.2"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
