[tool.poetry]
name = "puzzlepull-api"
version = "0.1.0"
description = ""
authors = ["Jarred Green <astrojarred@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"
fastapi = "^0.111.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
