[tool.poetry]
name = "puzzlepull"
version = "0.1.0"
description = ""
authors = ["Jarred Green <astrojarred@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"
fastapi = "^0.111.0"
redis = "^5.2.1"
pytest-playwright = "^0.7.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
ipython = "^9.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
